<resources>
    <string name="app_name">Petapp2.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_a_walker">Find a Walker</string>
    <string name="find_a_groomer">Find a Groomer</string>
    <string name="find_a_sitter">Find a Sitter</string>
    <string name="pet_toys">Pet Toys</string>
    <string name="pet_food">Pet Food</string>
    <string name="grooming_supplies">Grooming Supplies</string>
    <string name="pet_care">Pet Care</string>
    <string name="groomer">groomer</string>
    <string name="set_appointment">Set Appointment</string>
    <string name="order">Order</string>
    <string name="happy_shopping">Happy Shopping!</string>
    <string name="pet_essentials">Pet Essentials</string>
    <string name="dog_food">Dog Food</string>
    <string name="cat_food">Cat Food</string>
    <string name="food_bowl">Food Bowl</string>
    <string name="balls_and_squeekers">Balls and Squeekers</string>
    <string name="bones">Bones</string>
    <string name="mouse_on_string">Mouse on String</string>
    <string name="bones_and_cat_nip">Bones and Cat Nip</string>
    <string name="cart_items">Cart Items</string>
    <string name="bird_food">Bird Food</string>
    <string name="add_items_to_cart">Add Items to Cart</string>
    <string name="sitter">sitter</string>
    <string name="walker">walker</string>
    <string name="medical">Medical</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="treatments">Treatments</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="appointment">Appointment</string>
    <string name="reason_for_appointment">Reason for appointment.</string>
    <string name="dcotor_notes">Dcotor Notes</string>
    <string name="find_a_hospital">Find a Hospital</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="doctor_notes">Doctor Notes</string>
    <string name="breed">Breed</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="dog_name">Dog Name</string>
    <string name="treatment_options">Treatment Options</string>
    <string name="doctors_notes">Doctors Notes</string>
    <string name="notes">Notes</string>
    <string name="treatment_plan">Treatment Plan</string>
    <string name="prescribed_medicine">Prescribed Medicine</string>
    <string name="description">So, technically items may be re-arranged (like sorted, or moved around) and binding will not be necessary because items are not invalidated yet. This means onBindViewHolder() may NOT be called if items show the same data, but just their position/index in a list changes. The position variable received holds true only for the scope of bind function and will not always point to the correct position in the data set.</string>
</resources>